--- a/src/components/Header/index.less
+++ b/src/components/Header/index.less
@@ -6,6 +6,18 @@
 		padding: 0 20px;
 		text-align: right;
 		background: #fff;
+		.logo {
+			line-height: 60px;
+			text-align: left;
+			font-size: 18px;
+			img {
+				height: 40px;
+				vertical-align: middle;
+			}
+			span {
+				margin-left: 5px;
+			}
+		}
 		a {
 			margin-left: 40px;
 		}
@@ -47,4 +59,12 @@
 			}
 		}
 	}
+}
+
+// common 页面简单头
+.simplePage{
+  .headerTop{
+    background:#1890ff;
+    color:@colorM;
+  }
 }
